<?xml version="1.0"?>
<package format="2">
  <name>x_controller</name>
  <version>0.0.0</version>
  <description>The x_controller package</description>

  <maintainer email="filipporossi@hey.com">Filippo Rossi</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>x_linker</depend>

  <export>
  </export>
</package>
