<?xml version="1.0"?>
<package format="2">
  <name>x_linker</name>
  <version>0.0.0</version>
  <description>The x_linker package</description>

  <maintainer email="filipporossi@hey.com">Filippo Rossi</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
    <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}" />
  </export>
</package>
