<?xml version="1.0"?>
<package format="2">
  <name>x_robot</name>
  <version>0.0.0</version>
  <description>The x_robot package</description>

  <maintainer email="filipporossi@hey.com">Filippo Rossi</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>x_linker</depend>
  <depend>ur_description</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2_ros</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_ros_control</depend>
  <depend>gripper_action_controller</depend>

  <export>
  </export>
</package>
