<?xml version="1.0"?>
<package format="2">
  <name>x_vision</name>
  <version>0.0.0</version>
  <description>The x_vision package</description>
  <maintainer email="filipporossi@hey.com">Filippo Rossi</maintainer>

  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>x_msgs</depend>

  <export>
  </export>
</package>
