<?xml version="1.0"?>
<package format="2">
  <name>x_world</name>
  <version>0.0.0</version>
  <description>The x_world package</description>

  <maintainer email="filipporossi@hey.com">Filippo Rossi</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>x_robot</depend>

  <export>
  </export>
</package>
